--- a/force-app/main/default/pages/LeadWebPage.page
+++ b/force-app/main/default/pages/LeadWebPage.page
@@ -9,6 +9,7 @@
                 <apex:inputField value="{!leadRecord.Email}" label="Email" />
                 <apex:inputField value="{!leadRecord.Travel_Date__c}"  label="Travel Date"/>
                 <apex:inputField value="{!leadRecord.Number_of_Adult__c}"  label="No of Adult"/>
+                <apex:inputField value="{!leadRecord.Flight_No__c}"  label="Fight Number"/>
             </apex:pageBlockSection>
             
             <apex:pageBlockButtons >
