--- a/force-app/main/default/pages/LeadWebPage.page
+++ b/force-app/main/default/pages/LeadWebPage.page
@@ -6,7 +6,7 @@
             <apex:pageBlockSection title="Lead Details" columns="1">
                 <apex:inputField value="{!leadRecord.FirstName}" label="First Name" />
                 <apex:inputField value="{!leadRecord.LastName}" label="Last Name" />
-                <apex:inputField value="{!leadRecord.Email}" label="Email" />
+                <apex:inputField value="{!leadRecord.Email}" label="Email" required="true" />
                 <apex:inputField value="{!leadRecord.Travel_Date__c}"  label="Travel Date" />
                 <apex:inputField value="{!leadRecord.Number_of_Adult__c}"  label="No of Adult"/>
                 <apex:inputField value="{!leadRecord.Flight_No__c}"  label="Fight Number"/>
