--- a/force-app/main/default/lwc/flightBookingDetails/flightBookingDetails.css
+++ b/force-app/main/default/lwc/flightBookingDetails/flightBookingDetails.css
@@ -300,3 +300,23 @@ span {
 .slds-input.error {
     border: 2px solid #ff4c4c; /* Apply custom border styling */
 }
+
+/* Style for the message box */
+.message-box {
+    background-color: #cda45e; /* Custom background color */
+    color: #ffffff; /* White text color */
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 32px; /* Big font size */
+    font-weight: bold;
+    width: 100%;
+    margin-top: 20px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+/* Optional: Customize text further */
+.message-text {
+    font-size: 36px;
+    font-family: 'Arial', sans-serif;
+}
