--- a/force-app/main/default/lwc/flightBooking/flightBooking.css
+++ b/force-app/main/default/lwc/flightBooking/flightBooking.css
@@ -120,3 +120,9 @@ span {
     color: #444;
     font-size: 14px;
   }
+
+.error-message {
+    color: #BA0517; /* Red text */
+    font-size: 12px;
+    margin-top: 4px;
+}
