--- a/force-app/main/default/pages/ProformaInvoicePDF.page
+++ b/force-app/main/default/pages/ProformaInvoicePDF.page
@@ -56,6 +56,9 @@
                 .custom-table tr {
                 	page-break-inside: avoid;
                 }
+                body, p, td {
+                    line-height: 1.0; /* Or even 1.0 for tighter spacing */
+                }
                 
             </style>
         </head>
@@ -112,7 +115,15 @@
                 <br/><br/>
                  <table class="custom-table" border="1p">
                     <tr>
-                        <!--<th>Source</th>--><th>Sr.No</th><th>Description</th><th>HSN/HAC</th><th>Quantity</th><th>Unit Price</th><th>Taxes</th><th>Amount</th><th>Discount Amount</th>
+                        <!--<th>Source</th>-->
+                        <th>Sr.No</th>
+                        <th>Description</th>
+                        <th>HSN/HAC</th>
+                        <th>Quantity</th>
+                        <th>Unit Price</th>
+                        <th>Taxes</th>
+                        <th style="{!discountColumnStyle}">Discount Amount</th>
+                        <th>Amount</th>
                     </tr>
                     <apex:repeat value="{!oppLineItems}" var="item">
                         <tr>
@@ -123,8 +134,8 @@
                             <td>{!item.oppLineItem.Quantity}</td>
                             <td>{!item.oppLineItem.UnitPrice}</td>
                             <td>GST 18%</td>
+                            <td style="{!discountColumnStyle}">{!item.oppLineItem.Discount_Amount__c}</td>
                             <td>{!item.oppLineItem.TotalPrice}</td>
-                            <td>{!item.oppLineItem.Discount_Amount__c}</td>
                         </tr>
                     </apex:repeat>
                 </table>
